# transit-hs

./: .gitignore  README.md  ghcid-output.txt  shell.nix  transit-haskell.cabal
bench/: Main.hs
lib/Data/: Transit.hs
lib/Data/Transit/: JSON.hs  TH.hs  VerboseJSON.hs
test/: Main.hs
