cabal-version:       >=1.10

name:                transit-haskell
version:             0.1.0.0
author:              Joe Betz
maintainer:          joebetz91@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.Transit
                     , Data.Transit.JSON
  build-depends:       base >=4.12 && <4.13
                     , aeson
                     , array
                     , base64-bytestring
                     , bimap
                     , bytestring
                     , containers
                     , deepseq
                     , freer-simple
                     , hashable
                     , network-uri
                     , QuickCheck
                     , scientific
                     , split
                     , text
                     , time
                     , unordered-containers
                     , uuid
                     , vector
  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite transit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , transit-haskell
  default-language:    Haskell2010

executable transit-bench
  main-is:             Main.hs
  hs-source-dirs:      bench
  build-depends:       base
                     , aeson
                     , bytestring
                     , transit-haskell
                     , criterion
                     , raw-strings-qq
  default-language:    Haskell2010
  --ghc-options:         -threaded -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"